vlib/v/scanner/tests/comments_not_terminated_err.vv
fn main() {
	println('hello, world')
}

/*
fn tt() {
}
